# ci-auto-rescue

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  AGENT_HALLUCINATION_ANALYSIS.md  ALL_GPT5_FIXES_COMPLETE.md  AUDIT_IMPROVEMENTS_COMMIT.md  AUDIT_REPORT.md  BEST_OF_BOTH_WORLDS.md  BEST_OF_BOTH_WORLDS_COMPLETE.md  BRANCH_MIGRATION_PLAN.md  BUG_REPORT.md  BUG_REPORT_COMPREHENSIVE.md  CHANGELOG.md  CLI_CONSOLIDATION_CHECKLIST.md  CLI_CONSOLIDATION_COMPLETE.md  CLI_IMPLEMENTATION_COMPARISON.md  CLOUDSMITH_UPLOAD_INSTRUCTIONS.md  CODE_COMPARISON_ANALYSIS.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  COMPARISON_EXECUTIVE_SUMMARY.md  CONTRIBUTING.md  DEEP_AGENT_IMPLEMENTATION.md  DEEP_AGENT_TEST_README.md  DEEP_AGENT_UPDATE.md  DEMONSTRATION_COMPLETE.md  DEMO_CI_README.md  DETERMINISTIC_FIX_IMPLEMENTATION.md  DEVELOPMENT_BRANCH_STATUS.md  ENVIRONMENT_VAR_AND_TOOL_FIXES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_SUMMARY.md  GPT5_AND_MODEL_FIXES_COMPLETE.md  GPT5_AUDIT_REPORT.md  GPT5_BUG_REPORT_AND_COMPARISON.md  GPT5_FIXES_APPLIED.md  GPT5_IMPLEMENTATION_COMPLETE.md  (+139 more)
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/scripts/: post_nova_summary.py
.github/workflows/: README.md  ci-auto-rescue-simple.yml  ci-auto-rescue.yml  ci.yml  code-quality.yml  demo-ci.yml  deploy.yml  e2e-tests.yml  guard-tags.yml  nova-auto-fix.yml  nova-ci-rescue.yml  nova-demo-ci.yml  nova-manual.yml  nova-pr-check.yml  nova.yml  pre-commit.yml  prune-branches.yml  publish-both.yml  publish-package.yml  release.yml  security.yml
.nova/: test-report.json
apps/cli/: nova.py
assets/: README.md
demo-failing-tests/: VALIDATION_REPORT.md  demo_deep_agent_comparison.py  demo_fix.py  demo_langchain_fix.py  demo_nova_fix.py  demo_simple_fix.py  fix.patch  nova_agent_demo.py  pyproject.toml  show_diff.py  validation_results.json  {junit_report_path}
demo-failing-tests/src/: calculator.py  calculator.py.rej  calculator_fixed.py
demo-failing-tests/tests/: test_calculator.py
demo-repo/: .gitignore  README.md  pyproject.toml  requirements.txt
demo-repo/.github/workflows/: ci-auto-rescue.yml  nova-pr-check.yml  nova.yml
demo-repo/src/: __init__.py  calc.py  calculator.py
demo-repo/tests/: __init__.py  test_calc.py  test_calculator.py
docker/: Dockerfile  build.sh  requirements.txt  run_python.py
docs/: 01-happy-path-one-pager.md  02-architecture-diagram.md  03-task-dependency-graph.md  04-milestone-board.md  05-proof-checklist-template.md  06-quickstart-guide.md  07-risks-and-guardrails.md  08-demo-script.md  09-links-and-resources.md  10-team-notes.md  11-dr-audit-checklist.md  12-audit-security-features.md  13-limitations-and-known-issues.md  14-expectations-and-success-criteria.md  15-detailed-usage-examples.md  16-ux-cli-improvements.md  17-visual-assets-guide.md  18-faq.md  19-troubleshooting-guide.md  ARCHITECTURE.md  ARCHITECTURE_v1.1.md  BRANCH_STRATEGY.md  CONFIGURATION.md  DEPLOY_FLY.md  EVIDENCE.md  FAQ.md  GITHUB_PACKAGES.md  INSTALLATION.md  OPEN_SWE_KICKOFF.md  OPERATIONS-RUNBOOK.md  ORGSPEC.reference.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SANDBOX-BOOTSTRAP.md  TROUBLESHOOTING.md  applied-improvements-summary.md  cli_unification_summary.md  deep-agent-architecture.md  demo-project-structure.md  (+18 more)
docs/archive/: ACTION_PLAN.md  BUG_REPORT_COMPREHENSIVE.md  COMPARISON_SUMMARY.md  DEBUG_FINDINGS.md  FINAL_COMPARISON.md  MILESTONE_C_DELIVERY.md  MILESTONE_C_IMPLEMENTATION.md  PATCH_BUG_FIX_SUMMARY.md  PATCH_COMPARISON.md  PATCH_IMPROVEMENTS_SUMMARY.md  QUICK_SUMMARY.md  README.md  RELEASE_SUMMARY.md  THE_SIMPLE_FIX.md
docs/development/: ACTION_PLAN.md  BUG_REPORT_NEW.md  CI_RESCUE_HAPPY_PATH.md  CLEANUP_SUMMARY.md  HAPPY_PATH_IMPLEMENTATION.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_GUIDE.md  PR_DESCRIPTION.md  (+5 more)
evals/: README.md  demo_repos.yaml  minimal_test.yaml  quick_test.yaml  test_eval.yaml
examples/: config-example.yaml  demo_react_gpt5.py  safe_patch_manager_demo.py
game/: game.js  index.html  styles.css
github-app/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  app.js  index.js  package.json
nova-demo-repo/: E2E_SETUP_GUIDE.md  README.md  complete-demo.sh  demo-exact-flow.sh  github-workflow-ci.yml  quick-github-demo.sh
nova_test_results/: report.md  results.json
patches/: add_file_caching.patch  loop_prevention_improvements.md  loop_prevention_summary.md  state_loop_prevention.patch
personal-demo-repo/: test_nova_workflow.sh
regression_tests/: README.md  edge_case_generator.py  install_nova.sh  mock_nova.py  nova_runner_wrapper.py  nova_v1_0  nova_v1_1  regression_orchestrator.py  regression_report_generator.py  run_regression_tests.sh  run_tests.py  run_tests.sh  setup_environments.py  setup_environments.sh  setup_simple.py  test_real_nova.py  test_repos.yaml  validate_results.py
scripts/: branch-cleanup.sh  build_package.sh  check_github_token.py  clean_submodules.py  cleanup_merged_branches.sh  fix_all_demos.sh
src/: calculator.py  example.py  string_utils.py
test_patches/: 01_safe_patch.diff  02_dangerous_exec.diff  03_dangerous_eval.diff  04_dangerous_os_system.diff  05_modify_tests.diff  06_modify_config.diff  07_modify_pyproject.diff  08_duplicate_function.diff  09_exceeds_size_limit.diff  10_too_many_files.diff  11_dangerous_rm_rf.diff  README.md  context_divide_by_zero.txt  demo.sh  test_all_patches.sh
tests/: SAFETY_CHECK_TESTING.md  flask.py  nova_smoke_test.py  quickstart_test.py  test_apply_patch_safety.py  test_calculator.py  test_cli_consolidation.py  test_deterministic_agent.py  test_git_zero_diff.py  test_github_integration.py  test_github_integration_new.py  test_invalid_inputs.py  test_llm_param_shapes.py  test_patch_fix.py  test_percentage_negative.py  test_pr_generation.py  test_runner_discovery.py  test_safe_patch_manager.py  test_safety_limits.py  test_safety_pr_checks.py  test_sample.py  test_string_utils.py  test_telemetry_redaction.py  test_whole_file_guardrails.py  verify_e2e_results.py
(+249 files in other folders)
