requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-ci-rescue"
version = "0.4.0"
description = "Nova CI-Rescue: automated test fixing agent (MVP)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "NovaSolve", email = "sebastian@joinnova.com" }]
keywords = ["LLM", "LangGraph", "CI", "pytest", "agent", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.2.0",
  "typer>=0.9.0",
  "pydantic>=2.5.0",
  "unidiff>=0.7.5",
  "httpx>=0.24.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "PyYAML>=6.0.0",
  "pytest>=7.0.0",
  "pytest-json-report>=1.5.0",
  "tomli>=2.0.0;python_version<'3.11'",
  "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/novasolve/ci-auto-rescue"
Repository = "https://github.com/novasolve/ci-auto-rescue"
Issues = "https://github.com/novasolve/ci-auto-rescue/issues"

[project.scripts]
# Ensure you have: src/nova/cli.py with a Typer app named `app`
nova = "nova.cli:app"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
